<resources>
    <string name="app_name">Word By Word Quran</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_about">About</string>

    <!--ToolBar-->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_rateUs">Rate us</string>

    <!--About-->
    <string name="see_apps"><u>Our other Apps</u></string>
    <string name="mail_us">Mail us: labloops@gmail.com</string>
    <string name="rats_us">Rate Us</string>
    <string name="mail_loopslab" translatable="false">labloops@hmail.com</string>
    <string name="loopslab" translatable="false">https://play.google.com/store/apps/developer?id=LoopsLab</string>
    <string name="loopslabFb" translatable="false">https://www.facebook.com/LoopsLabBd</string>
    <string name="shareCopy">Share/Copy App\'s link</string>
    <string name="copyToastText">Copied to Clipboard</string>

    <!-- Settings-->
    <string name="lang">Language</string>
    <string name="content">Content</string>
    <string name="show_trans">Show Translation</string>
    <string name="wordbyword">Word By Word</string>
    <string name="appearance">Appearance(Application Restart Required)</string>
    <string name="arabic_font">Arabic Font</string>
    <string name="arabic_font_size">Arabic Font Size</string>
    <string name="trans_font_size">Translation Font Size</string>
    <string name="other">Other</string>
    <string name="screen_on">Keep Screen On</string>
    <string name="string" translatable="false">bn</string>

    <!-- -->
    <string name="cancel">Cancel</string>
    <string name="rootWord">Root</string>

    <string name="copy">Copy</string>
    <string name="share">Share</string>

    <string name="bismillah">بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ</string>
    <string name="title_activity_test">TestActivity</string>

</resources>
